# self-reflection

./: .gitignore  README.md  pyproject.toml
src/self_reflection_llm/: __init__.py  __main__.py  llm_engine.py  log.py  mcp_router.py  mcp_types.py  reflexion.py  system_instructions.py  tools_definitions.py  types.py
src/self_reflection_llm/settings/: credentials.py
