[project]
name = "self-reflection-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "milkymap", email = "ibrahima.elmokhtar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "mcp>=1.9.4",
    "openai>=1.91.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
self-reflection-llm = "self_reflection_llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
